Prototype_OS_v3.0.3_work

--- a/Makefile.win
+++ b/Makefile.win
@@ -6,9 +6,9 @@ CC       = gcc.exe
 WINDRES  = windres.exe
 OBJ      = main.o Foo1.o Foo2.o Foo3.o Foo4.o
 LINKOBJ  = main.o Foo1.o Foo2.o Foo3.o Foo4.o
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
-INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include"
-CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include"
+LIBS     = -L"D:/Programs/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
+INCS     = -I"D:/Programs/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include"
+CXXINCS  = -I"D:/Programs/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include"
 BIN      = test_OOP_1.exe
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
