--- a/Makefile.win
+++ b/Makefile.win
@@ -1,23 +1,22 @@
 # Project: test_OOP_1
-# Makefile created by Dev-C++ 5.4.2
+# Makefile created by Dev-C++ 5.11
 
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o Foo1.o Foo2.o Foo3.o Foo4.o
-LINKOBJ  = main.o Foo1.o Foo2.o Foo3.o Foo4.o
-LIBS     = -L"D:/Programs/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
-INCS     = -I"D:/Programs/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include"
-CXXINCS  = -I"D:/Programs/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include"
+OBJ      = main.o Foo1.o Foo2.o Foo3.o Foo4.o Foo5.o
+LINKOBJ  = main.o Foo1.o Foo2.o Foo3.o Foo4.o Foo5.o
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
+INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
+CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
 BIN      = test_OOP_1.exe
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
-RM       = rm -f
+RM       = rm.exe -f
 
 .PHONY: all all-before all-after clean clean-custom
 
 all: all-before $(BIN) all-after
-
 
 clean: clean-custom
 	${RM} $(OBJ) $(BIN)
@@ -39,3 +38,6 @@ Foo3.o: Foo3.cpp
 
 Foo4.o: Foo4.cpp
 	$(CPP) -c Foo4.cpp -o Foo4.o $(CXXFLAGS)
+
+Foo5.o: Foo5.cpp
+	$(CPP) -c Foo5.cpp -o Foo5.o $(CXXFLAGS)
